[package]
name = "url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
rusqlite = "0.27.0"
sha2 = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
